# ToDoList

./: .gitignore  CMakeLists.txt  README.md  ToDo.pro  ToDo.pro.user.4dadcfc  ToDo.pro.user.de45216  ToDoList.aps  ToDoList.rc  addt.h  delt.h  delt.ui  dialogdel.h  dialogdel.ui  editt.cpp  editt.h  file.aps  kursovaya.sqlite  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  markt.h  test.cpp  test.h  ui_mainwindow.h
.github/workflows/: github-actions.yml
Forms/: addt.ui  editt.ui  markt.ui
Sources/: addt.cpp  delt.cpp  dialogdel.cpp  markt.cpp
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/includes/: test.h
src/test/: test.cpp
